2000-10-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-selective/selective.exp: Rearrange to be table-driven.

2000-10-07  Alan Modra  <alan@linuxcare.com.au>

	* ld-scripts/phdrs.exp: hppa*64*-*-* is 64-bit ELF too.

2000-10-02  Alan Modra  <alan@linuxcare.com.au>

	* ld-scripts/weak.exp: Don't set $global$ for hppa-elf any more.
	* ld-scripts/crossref.exp: Ditto.

2000-09-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-selective/5.cc: New test.
	* ld-selective/selective.exp: Run it as xfailed.

	* ld-selective/4.cc: Correct spelling of "lose".

2000-09-05  Alan Modra  <alan@linuxcare.com.au>

	* ld-selective/selective.exp: Remove the xfails for hppa.

2000-08-30  Alexandre Oliva  <aoliva@redhat.com>

	* ld-undefined/undefined.exp (hppa*64*-*-*, mn10300-*-elf,
	sh-*-*): With dwarf-2, `undefined function' can't pass.

2000-08-03  H.J. Lu  (hjl@gnu.org)

	* ld-bootstrap/bootstrap.exp: Add strip.

2000-07-24  H.J. Lu  (hjl@gnu.org)

	* ld-elfvsb/elfvsb.exp: Add -g to $CC to get the location of
	the undefined reference.

2000-07-16  H.J. Lu  (hjl@gnu.org)

	* ld-elfvsb/elfvsb.exp (support_protected): New variable. Check
	and set to "yes" if the protected visibility is expected to
	pass.
	(visibility_run): Set expected to fail for the "protected"
	and "protected_undef_def" tests only if $support_protected is
	"no".

	* ld-elfvsb/main.c (PROTECTED_CHECK): Check for the protected
	visibility support if defined.

2000-07-15  H.J. Lu  (hjl@gnu.org)

	* ld-elfvsb/elfvsb.exp (visibility_run): Set expected failure
	for "protected_undef_def".

	* ld-elfvsb/main.c: Don't define HIDDEN_UNDEF_TEST when
	PROTECTED_WEAK_TEST is defined.
	Don't define PROTECTED_UNDEF_TEST when PROTECTED_WEAK_TEST is
	defined.
	Define PROTECTED_TEST when PROTECTED_UNDEF_TEST is defined.

	* ld-elfvsb/sh1.c (visibility): Mark protected only if
	PROTECTED_TEST, PROTECTED_UNDEF_TEST or PROTECTED_WEAK_TEST
	is defined.
	(visibility_var): Likewise.

2000-07-10  Alan Modra  <alan@linuxcare.com.au>
